- red screen fixed, horizontal align too - need to fix vertical one

--- a/src/styles.css
+++ b/src/styles.css
@@ -104,3 +104,8 @@ body {
 .logoText{
     color: purple;
 }
+
+.quizGame {
+    text-align: center;
+    background: white;
+}
